--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1698b42
+	base = 9a7c8dc
 	trimbase = 
 	parent = rpm/indigo/uwsim_osgbullet
-	previous = 
+	previous = 1698b42
